--- a/members.html
+++ b/members.html
@@ -57,7 +57,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home" id="home">
-                <img src="assets/img/teampg.jpg" alt="" class="home__img">
+                <img src="assets\img\teamcon.JPG" alt="" class="home__img">
 
                 <div class="home__container container grid">
                     <div class="home__data">
