--- a/events.html
+++ b/events.html
@@ -28,10 +28,10 @@
                             <a href="index.html" class="nav__link ">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="gallery.html" class="nav__link active-link">Gallery</a>
+                            <a href="gallery.html" class="nav__link">Gallery</a>
                         </li>
                         <li class="nav__item">
-                            <a href="events.html" class="nav__link">Events</a>
+                            <a href="events.html" class="nav__link active-link">Events</a>
                         </li>
                         <li class="nav__item">
                             <a href="members.html" class="nav__link">Team</a>
